force-app/main/default/objects/Location/fields/Care_of_Name__c.field-meta.xml
<CustomField>
    <fullName>Care_of_Name__c</fullName>
    <label>C/O Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>