force-app/main/default/objects/Location/fields/HRCFSL_Account__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce Account which is the parent of this Customer Location. Since HillRom has 1 salesforce account to many JDE customers, we decided to go custom lookup relationship rather than many to many associated location.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>