force-app/main/default/objects/Location/fields/HRCSVC20_GPO__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_GPO__c</fullName>
    <description>SE-2538-Ability to see GPO and IDN fields in customer details section</description>
    <formula>IF (HRCFSL_Account__r.Name  =&quot;FSL Dummy account&quot;, &quot;&quot;, HRCFSL_Account__r.GPO__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPO</label>
    <type>Text</type>
</CustomField>