force-app/main/default/objects/Location/fields/HRCSVC20_GPO_Rental_Therapy__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_GPO_Rental_Therapy__c</fullName>
    <description>SE-2538-Ability to see GPO and IDN fields in customer details section</description>
    <formula>IF (HRCFSL_Account__r.Name  =&quot;FSL Dummy Account&quot;, &quot;&quot;,  HRCFSL_Account__r.GPO_Rental_Therapy__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPO Rental Therapy</label>
    <type>Text</type>
</CustomField>