force-app/main/default/objects/Location/fields/HRCSVC20_IDN_1__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_IDN_1__c</fullName>
    <description>SE-2538-Ability to see GPO and IDN fields in customer details section (Service Cloud 2.1)</description>
    <formula>IF (HRCFSL_Account__r.Name  =&quot;FSL Dummy Account&quot;, &quot;&quot;,  HRCFSL_Account__r.IDN_1__c)</formula>
    <label>IDN 1</label>
    <type>Text</type>
</CustomField>