force-app/main/default/objects/Location/fields/HRCSVC20_IDN_2__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_IDN_2__c</fullName>
    <description>SE-2538-Ability to see GPO and IDN fields in customer details section</description>
    <formula>IF (HRCFSL_Account__r.Name  =&quot;FSL Dummy account&quot;, &quot;&quot;,  HRCFSL_Account__r.IDN_2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDN 2</label>
    <type>Text</type>
</CustomField>