force-app/main/default/objects/Location/fields/HRCSVC20_IDN_3__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_IDN_3__c</fullName>
    <description>SE-2538-Ability to see GPO and IDN fields in customer details section</description>
    <formula>IF (HRCFSL_Account__r.Name  =&quot;FSL Dummy Account&quot;, &quot;&quot;,  HRCFSL_Account__r.IDN_3__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDN 3</label>
    <type>Text</type>
</CustomField>