force-app/main/default/objects/Location/fields/HRCSVC20_IDN_HIERARCHY_IQVIA__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_IDN_HIERARCHY_IQVIA__c</fullName>
    <description>SE-2538-Ability to see GPO and IDN fields in customer details section (Service Cloud 2.1)</description>
    <formula>IF (HRCFSL_Account__r.Name  =&quot;FSL Dummy Account&quot;, &quot;&quot;,  HRCFSL_Account__r.FK_IDN_HIERARCHY__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDN HIERARCHY - IQVIA</label>
    <type>Text</type>
</CustomField>