force-app/main/default/objects/Location/fields/HRCSVC20_IDN_LEVEL_2_IQVIA__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_IDN_LEVEL_2_IQVIA__c</fullName>
    <description>SE-2538-Ability to see GPO and IDN fields in customer details section</description>
    <formula>IF (HRCFSL_Account__r.Name  =&quot;FSL Dummy account&quot;, &quot;&quot;,  HRCFSL_Account__r.FK_IDN_LEVEL_2__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDN LEVEL 2 - IQVIA</label>
    <type>Text</type>
</CustomField>