force-app/main/default/objects/Location/fields/HRCSVC_Attn_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Attn_Name__c</fullName>
    <label>Attn Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>