force-app/main/default/objects/Location/fields/HRCSVC_Check_Address__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Check_Address__c</fullName>
    <inlineHelpText>Check payment option conditionally shown on Service Estimate documents if populated</inlineHelpText>
    <label>Check Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>