force-app/main/default/objects/Location/fields/HRCSVC_Email__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>