force-app/main/default/objects/Location/fields/HRCSVC_Fax__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>