force-app/main/default/objects/Location/fields/HRCSVC_Phone__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>