force-app/main/default/objects/Location/fields/HRCSVC_Printer_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Printer_Serial_Number__c</fullName>
    <label>Printer Serial Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>