force-app/main/default/objects/Location/fields/HRCSVC_Region__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Region__c</fullName>
    <description>SE-1109 - Populate Region based on the country.</description>
    <formula>IF(
  AND( NOT( ISPICKVAL( HRCFSL_Country__c , &quot;&quot;) ),CONTAINS( $CustomMetadata.HRCFSL_Organization_Settings__mdt.HRCSVC_European_Countries.HRCFSL_Component_Detail__c ,  TEXT( HRCFSL_Country__c))) , &quot;Europe&quot; ,
          If( ISPICKVAL( HRCFSL_Country__c , &quot;US&quot;), &quot;US&quot;, 
		             If(ISPICKVAL( HRCFSL_Country__c , &quot;CA&quot;), &quot;Canada&quot;, null )))</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>