force-app/main/default/objects/Location/fields/HRCSVC_Subsidiary_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Subsidiary_Disclosure__c</fullName>
    <inlineHelpText>Conditionally shown on RMA &amp; Service Estimate documents if populated</inlineHelpText>
    <label>Subsidiary Disclosure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>