force-app/main/default/objects/Location/fields/HRCSVC_Website__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>