force-app/main/default/objects/Location/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet> 
</CustomField> 